--- a/Entrada/MainWindow.xaml
+++ b/Entrada/MainWindow.xaml
@@ -10,7 +10,7 @@
         <TextBlock HorizontalAlignment="Left" Margin="36,36,0,0" TextWrapping="Wrap" Text="Elegir dispositivo:" VerticalAlignment="Top"/>
         <ComboBox x:Name="cmb_Dispositivos" HorizontalAlignment="Left" Margin="36,67,0,0" VerticalAlignment="Top" Width="626" SelectedIndex="0"/>
         <Button x:Name="btn_Iniciar" Content="Iniciar" HorizontalAlignment="Left" Margin="36,109,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.493,0.5" Click="btn_Iniciar_Click"/>
-        <Button x:Name="btn_Detener" Content="Detener" HorizontalAlignment="Left" Margin="155,109,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.493,0.5"/>
+        <Button x:Name="btn_Detener" Content="Detener" HorizontalAlignment="Left" Margin="155,109,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.493,0.5" Click="btn_Detener_Click"/>
         <Slider x:Name="sld_Microfono" HorizontalAlignment="Left" Margin="677,71,-13,0" VerticalAlignment="Top" Width="128" RenderTransformOrigin="0.5,0.5" Maximum="1">
             <Slider.RenderTransform>
                 <TransformGroup>
