--- a/Entrada/MainWindow.xaml
+++ b/Entrada/MainWindow.xaml
@@ -11,7 +11,7 @@
         <ComboBox x:Name="cmb_Dispositivos" HorizontalAlignment="Left" Margin="36,67,0,0" VerticalAlignment="Top" Width="626" SelectedIndex="0"/>
         <Button x:Name="btn_Iniciar" Content="Iniciar" HorizontalAlignment="Left" Margin="36,109,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.493,0.5" Click="btn_Iniciar_Click"/>
         <Button x:Name="btn_Detener" Content="Detener" HorizontalAlignment="Left" Margin="155,109,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.493,0.5" Click="btn_Detener_Click"/>
-        <Slider x:Name="sld_Microfono" HorizontalAlignment="Left" Margin="677,71,-13,0" VerticalAlignment="Top" Width="128" RenderTransformOrigin="0.5,0.5" Maximum="1">
+        <Slider x:Name="sld_Microfono" HorizontalAlignment="Left" Margin="677,71,-13,0" VerticalAlignment="Top" Width="128" RenderTransformOrigin="0.5,0.5" Maximum="44101">
             <Slider.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -21,6 +21,9 @@
                 </TransformGroup>
             </Slider.RenderTransform>
         </Slider>
-
+        <TextBlock x:Name="lbl_Frecuencia" HorizontalAlignment="Left" Margin="155,178,0,0" TextWrapping="Wrap" Text="0 Hz" VerticalAlignment="Top" Height="37" Width="193" FontSize="24"/>
+        <Canvas x:Name="canvas" HorizontalAlignment="Left" Height="179" Margin="40,230,0,0" VerticalAlignment="Top" Width="254">
+            <Image x:Name="imgcarro" Height="183" Width="254" Canvas.Top="-1" Source="carro-cruz-azul.jpg" RenderTransformOrigin="0.006,0.571" />
+        </Canvas>
     </Grid>
 </Window>
